# Crabbit

./: .gitignore  Cargo.toml  README.md  TESTING.md  auth_test.exp  crabbit.example.toml  test-auth.sh  test-config.toml
crabbit/: ARCHITECTURE.md  AUTH.md  CONFIG.md  CONTENTS.md  PROTOCOL.md  README.md
docs/: key-storage-format.md
examples/: run-auth-server.rs  test-auth-client.rs  test-wg-connection.rs
scripts/: setup-test.sh
src/: auth.rs  auth_client.rs  auth_server.rs  authpak.rs  config.rs  des9.rs  keys.rs  lib.rs  main.rs  net_engine.rs  ninep.rs  wireguard.rs
